--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-05 Wed 16:42 -->
+<!-- 2023-01-23 Mon 08:30 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgace7c9f">
+<figure id="orgcd15212">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -100,7 +100,7 @@ nav li {
 
 <div id="outline-container-Summary" class="outline-2">
 <h2 id="Summary">Summary</h2>
-<div class="outline-text-2" id="text-org857f4a7">
+<div class="outline-text-2" id="text-org01327ae">
 <p>
 My current research involves the dynamics of multiagent systems and the
 alignment of local incentives with global objectives. My background is in
@@ -113,7 +113,7 @@ abroad, remotely developing software related to automated circuit design.
 
 <div id="outline-container-Research-Interests" class="outline-2">
 <h2 id="Research-Interests">Research Interests</h2>
-<div class="outline-text-2" id="text-org9999740">
+<div class="outline-text-2" id="text-org98130a8">
 <ul class="org-ul">
 <li>Multiagent systems, algorithmic game theory</li>
 <li>Theories of collective learning</li>
@@ -124,7 +124,7 @@ abroad, remotely developing software related to automated circuit design.
 
 <div id="outline-container-Expertise" class="outline-2">
 <h2 id="Expertise">Expertise</h2>
-<div class="outline-text-2" id="text-org85843df">
+<div class="outline-text-2" id="text-orgcbec981">
 <ul class="org-ul">
 <li>Non-linear dynamics, signal-processing, optimization</li>
 <li>Multiple programming paradigms (C, Python, JavaScript, Lisp, Haskell, Prolog, Shell) <br></li>
@@ -134,7 +134,7 @@ abroad, remotely developing software related to automated circuit design.
 
 <div id="outline-container-Work-amp-Research" class="outline-2">
 <h2 id="Work-amp-Research">Work &amp; Research</h2>
-<div class="outline-text-2" id="text-orgd6e0e10">
+<div class="outline-text-2" id="text-org6c75794">
 
 <div class="cv-block">
 <table>
@@ -207,7 +207,7 @@ Organic semiconductor device fabrication and characterization<br />Surface morph
 
 <div id="outline-container-Education" class="outline-2">
 <h2 id="Education">Education</h2>
-<div class="outline-text-2" id="text-org066fff7">
+<div class="outline-text-2" id="text-orge3ddd6f">
 
 <div class="cv-block">
 <table>
@@ -263,7 +263,7 @@ UCEAP Scholarship<br />UCSB EAP Scholarship
 
 <div id="outline-container-Teaching-Experience" class="outline-2">
 <h2 id="Teaching-Experience">Teaching Experience</h2>
-<div class="outline-text-2" id="text-org8c3a6c9">
+<div class="outline-text-2" id="text-org6995a82">
 
 <div class="cv-block">
 <table>
@@ -336,7 +336,7 @@ Same as above
 
 <div id="outline-container-Honors-amp-Awards" class="outline-2">
 <h2 id="Honors-amp-Awards">Honors &amp; Awards</h2>
-<div class="outline-text-2" id="text-orgd34d671">
+<div class="outline-text-2" id="text-org7d14a7a">
 
 <div class="cv-block">
 <table>
@@ -409,7 +409,7 @@ Same as above
 
 <div id="outline-container-Publications" class="outline-2">
 <h2 id="Publications">Publications</h2>
-<div class="outline-text-2" id="text-orge996a7b">
+<div class="outline-text-2" id="text-org6eb426a">
 <p>
 <a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection</a> <br>
 <strong>Reilly Raab</strong>, Luca de Alfaro, and Yang Liu <br>
@@ -443,7 +443,7 @@ Jason D. A. Lin <strong>et. al.</strong> <br>
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
