--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-25 Sat 21:04 -->
+<!-- 2023-01-23 Mon 08:31 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 <link rel="canonical" href="https://reillyraab.com" />
 <meta name="description" content="This site is a space for me to share my interest in various subjects, publish personal essays, and communicate about projects or developments which are important to me."/>
 </head>
@@ -26,7 +27,7 @@
 </header>
 <div id="outline-container-Pages" class="outline-2">
 <h2 id="Pages">Pages</h2>
-<div class="outline-text-2" id="text-org3f3a5b4">
+<div class="outline-text-2" id="text-org139bb47">
 <p>
 <a href="./site-info.html">Technical Site Info</a> <br>
 <a href="./about.html">Curriculum Vitae</a>
@@ -36,7 +37,7 @@
 
 <div id="outline-container-Notes" class="outline-2">
 <h2 id="Notes">Notes</h2>
-<div class="outline-text-2" id="text-orgafe1bc5">
+<div class="outline-text-2" id="text-orga750219">
 <p>
 <a href="./demo.html">HTML Demo &amp; Reference</a> <br>
 <a href="./reading-list.html">Digital Bookshelf</a> <br>
@@ -49,7 +50,7 @@
 
 <div id="outline-container-Projects" class="outline-2">
 <h2 id="Projects">Projects</h2>
-<div class="outline-text-2" id="text-orgade49d0">
+<div class="outline-text-2" id="text-orge9b9aa4">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
@@ -61,7 +62,7 @@
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
