--- a/ito.html
+++ b/ito.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-25 Sun 17:02 -->
+<!-- 2023-01-23 Mon 08:32 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Stochastic Calculus</title>
@@ -50,7 +50,7 @@
 
 <div id="outline-container-Sum-of-Centered-Gaussians" class="outline-2">
 <h2 id="Sum-of-Centered-Gaussians">Sum of Centered Gaussians</h2>
-<div class="outline-text-2" id="text-org28522d9">
+<div class="outline-text-2" id="text-orge1fd97e">
 <p>
 Consider the sum of two independent random variables <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span>
@@ -83,7 +83,7 @@ and the variance of <!--Y-->
 
 <div id="outline-container-A-Continuous-Random-Walk" class="outline-2">
 <h2 id="A-Continuous-Random-Walk">A Continuous Random Walk</h2>
-<div class="outline-text-2" id="text-orgbddb25b">
+<div class="outline-text-2" id="text-org1fbbaa6">
 <p>
 Imagine a <em>continuous-time</em> random walk <!--W(t)-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>W</mi><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">W(t)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">W</span><span class="mopen">(</span><span class="mord mathnormal">t</span><span class="mclose">)</span></span></span></span>
@@ -127,7 +127,7 @@ For positive, infinitesimal differences in time, we may write
 
 <div id="outline-container-Quadratic-Variation" class="outline-2">
 <h2 id="Quadratic-Variation">Quadratic Variation</h2>
-<div class="outline-text-2" id="text-orgd79adce">
+<div class="outline-text-2" id="text-orgb586c37">
 <p>
 If we consider infinitesimal differences in time and recall that, for any
 random variable <!--Z-->
@@ -160,7 +160,7 @@ variation in <!--W-->
 
 <div id="outline-container-Drift-Diffusion-Processes" class="outline-2">
 <h2 id="Drift-Diffusion-Processes">Drift-Diffusion Processes</h2>
-<div class="outline-text-2" id="text-org918e6f7">
+<div class="outline-text-2" id="text-org77d31a2">
 <p>
 An Itô drift-diffusion process may be represented in terms of differentials in
 <!--t-->
@@ -194,7 +194,7 @@ and variance, respectively, in this example for <!--\frac{{\rm d}X}{{\rm d} t}--
 
 <div id="outline-container-It-rsquo-s-Lemma" class="outline-3">
 <h3 id="It-rsquo-s-Lemma">Itô&rsquo;s Lemma</h3>
-<div class="outline-text-3" id="text-orgda59c35">
+<div class="outline-text-3" id="text-orgf3f52d6">
 <p>
 Twice-differentiable functions applied to drift-diffusion stochastic processes
 also define drift-diffusion stochastic processes. For example, given a
@@ -233,7 +233,7 @@ classical chain rule:
 
 <div id="outline-container-Geometric-Brownian-Motion" class="outline-2">
 <h2 id="Geometric-Brownian-Motion">Geometric Brownian Motion</h2>
-<div class="outline-text-2" id="text-orgcc90db9">
+<div class="outline-text-2" id="text-org2956b08">
 <p>
 Consider a stochastic process <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span>
@@ -261,7 +261,7 @@ We provide two means of solving for <!--X(t)-->
 
 <div id="outline-container-By-It-rsquo-s-Lemma" class="outline-3">
 <h3 id="By-It-rsquo-s-Lemma">By Itô&rsquo;s Lemma</h3>
-<div class="outline-text-3" id="text-org2f9800e">
+<div class="outline-text-3" id="text-orgd792450">
 <p>
 First, we consider mapping mapping geometric Brownian motion by the function <!--f = \log x-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>f</mi><mo>=</mo><mi>log</mi><mo>⁡</mo><mi>x</mi></mrow><annotation encoding="application/x-tex">f = \log x</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.10764em;">f</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.8889em;vertical-align:-0.1944em;"></span><span class="mop">lo<span style="margin-right:0.01389em;">g</span></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">x</span></span></span></span>.
@@ -305,7 +305,7 @@ Substituting <!--X(t) = e^{f(t)}-->
 
 <div id="outline-container-By-Quadratic-Variation" class="outline-3">
 <h3 id="By-Quadratic-Variation">By Quadratic Variation</h3>
-<div class="outline-text-3" id="text-orgb31582e">
+<div class="outline-text-3" id="text-orgef8e7db">
 <p>
 Another approach is to note that both the definition of geometric Brownian
 motion (<a href="#eqn-5">Eq. (5)</a>) and a Taylor expansion of <!--X-->
@@ -344,7 +344,7 @@ arrive at the unique solution
 
 <div id="outline-container-Properties" class="outline-3">
 <h3 id="Properties">Properties</h3>
-<div class="outline-text-3" id="text-orga218ef7">
+<div class="outline-text-3" id="text-orgd3c2fe5">
 <p>
 Noting that <!--X(t)-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">X(t)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span><span class="mopen">(</span><span class="mord mathnormal">t</span><span class="mclose">)</span></span></span></span>
@@ -358,7 +358,7 @@ Noting that <!--X(t)-->
 
 <div id="outline-container--em-vs-em-Discrete-Time" class="outline-3">
 <h3 id="-em-vs-em-Discrete-Time"><em>vs</em> Discrete-Time</h3>
-<div class="outline-text-3" id="text-org64a3fff">
+<div class="outline-text-3" id="text-org3648a85">
 <p>
 Imagine investing in a security <!--X-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07847em;">X</span></span></span></span>, the valuation of which (<em>e.g.</em>, relative
@@ -405,7 +405,7 @@ when we identify
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
