--- a/site-info.html
+++ b/site-info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-08-30 Tue 12:02 -->
+<!-- 2023-01-23 Mon 08:29 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Site Info</title>
@@ -39,7 +39,7 @@ This site is currently accessible from the following URLs:
 </p>
 
 <p>
-This git repository is the source of truth for this website. It is hosted by
+This <a href="https://github.com/raabrp/raabrp.github.io">git repository</a> is the source of truth for this website. It is hosted by
 <a href="https://pages.github.com/">github pages</a> with a <a href="https://en.wikipedia.org/wiki/CNAME_record">CNAME</a> file pointing to <samp>reillyraab.com</samp>.
 </p></li>
 
@@ -48,7 +48,7 @@ This git repository is the source of truth for this website. It is hosted by
 </p>
 
 <p>
-This domain is registered with <a href="https://www.namecheap.com/">Namecheap</a>, using to <a href="https://en.wikipedia.org/wiki/Cloudflare">Cloudflare&rsquo;s</a> nameservers.
+This domain is registered with <a href="https://www.namecheap.com/">Namecheap</a>, using <a href="https://en.wikipedia.org/wiki/Cloudflare">Cloudflare&rsquo;s</a> nameservers.
 </p>
 
 <p>
@@ -70,7 +70,7 @@ My user account has an <a href="https://en.wikipedia.org/wiki/.htaccess">.htacce
 
 <div id="outline-container-Privacy" class="outline-2">
 <h2 id="Privacy">Privacy</h2>
-<div class="outline-text-2" id="text-org2fefc5f">
+<div class="outline-text-2" id="text-org626acf4">
 <p>
 I store no information about you whatsoever.
 </p>
@@ -78,14 +78,14 @@ I store no information about you whatsoever.
 <p>
 Network resources (<a href="https://en.wikipedia.org/wiki/JavaScript">javascript</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">css</a>, fonts, etc.), including library code, are
 hosted by this site itself and content delivery networks are largely avoided
-(except any those used by Cloudflare).
+(except any used by Cloudflare).
 </p>
 </div>
 </div>
 
 <div id="outline-container-Third-Party-Privacy-Policy" class="outline-2">
 <h2 id="Third-Party-Privacy-Policy">Third-Party Privacy Policy</h2>
-<div class="outline-text-2" id="text-org214920e">
+<div class="outline-text-2" id="text-org73684b1">
 <p>
 By using this site, you are an end user of Coudflare&rsquo;s services.
 </p>
@@ -101,8 +101,9 @@ Cloudflare performs caching and the <samp>github.io</samp> content is static.
 <p>
 For all intents and purposes, when your browser is communicating with this site,
 it&rsquo;s communicating with Cloudflare. While HTTPS might hide which specific
-interactions with this site from your <a href="https://en.wikipedia.org/wiki/Internet_service_provider">ISP</a>, this does not hinder Cloudflare in
-seeing your specific network requests for the content of this site.
+interactions you have with this site from your <a href="https://en.wikipedia.org/wiki/Internet_service_provider">ISP</a>, this does not hinder
+Cloudflare in seeing your specific network requests for the content of this
+site.
 </p>
 
 <blockquote>
@@ -131,7 +132,7 @@ aggregated data may be shared with third parties.
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
