--- a/tex.html
+++ b/tex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-18 Sat 14:21 -->
+<!-- 2023-01-23 Mon 08:33 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Live Tex to SVG, PNG</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 <link rel=“canonical” href=“https://reillyraab.com/tex" />
 <meta name="description" content="Live LaTeX to SVG and PNG rendering in the browser." />
 </head>
@@ -52,7 +53,7 @@ Font size (PNG only) <!--\in [1, 1000]-->
 
 \newcommand{\coloneqq}{\mathrel{\vcenter{:}}=}
 
-\Re \coloneqq \frac{z + z^\dagger}{2}
+\Re(z) \coloneqq \frac{z + z^\dagger}{2}
 </textarea>
 
 <p>Powered by <a href="https://www.mathjax.org/">MathJax</a></p>
@@ -148,7 +149,7 @@ Font size (PNG only) <!--\in [1, 1000]-->
 </script>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
