--- a/chess.html
+++ b/chess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-21 Tue 21:44 -->
+<!-- 2023-01-23 Mon 08:32 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chess</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 <link rel="canonical" href="https://reillyraab.com/chess" />
 <meta name="description" content="Free online chess for correspondence play. Send links encoding game state to opponent."/>
 </head>
@@ -390,7 +391,7 @@ onReady(function() {
 </script>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
