--- a/greyline.html
+++ b/greyline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-25 Sat 21:03 -->
+<!-- 2023-01-23 Mon 08:33 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Greyline Map</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 <link rel=“canonical” href=“https://reillyraab.com/greyline" />
 <meta name="description" content="A map of Earth and interactive astronomical clock" />
 <script defer src="js/lib/astronomy.browser.js"></script>
@@ -44,7 +45,7 @@
 <img id="night" src="/img/greyline/night.jpg" style="display: none;" width="100%"/>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
