--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-08-30 Tue 11:46 -->
+<!-- 2023-01-23 Mon 08:32 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -60,18 +60,18 @@ tbody > tr:first-of-type h4 {
 
 <p>
 <center>
-<em>Your local library may be an alternative to <a href="https://z-lib.org/">Z-Library</a>
+<em>Your local library may be an alternative to <a href="https://singlelogin.me/">Z-Library</a>
 or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </center>
 </p>
 
 <div id="outline-container-Math-and-Science" class="outline-2">
 <h2 id="Math-and-Science">Math and Science</h2>
-<div class="outline-text-2" id="text-orgc91ab31">
+<div class="outline-text-2" id="text-orgd997e37">
 </div>
 <div id="outline-container-Physics" class="outline-3">
 <h3 id="Physics">Physics</h3>
-<div class="outline-text-3" id="text-org7a15d8e">
+<div class="outline-text-3" id="text-orgdb7773d">
 <table>
   <tr>
     <td colspan="3">
@@ -94,22 +94,22 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     </td>
   </tr>
   <tr>
-    <td><a href="https://www.youtube.com/watch?v=SjTfNFso4mE&list=PLbMVogVj5nJQqNx0ElSk3Ip04Ofg7B22W">Nonequilibrium Statistical Mechanics</a></td>
+    <td><a href="https://www.youtube.com/playlist?list=PLbMVogVj5nJQqNx0ElSk3Ip04Ofg7B22W">Nonequilibrium Statistical Mechanics</a></td>
     <td><a href="https://en.wikipedia.org/wiki/V._Balakrishnan_%28physicist%29">V. Balakrishnan</a></td>
     <td>2016</td>
   </tr>
   <tr>
-    <td><a href="https://www.youtube.com/watch?v=TG1Jjp8eyvs&list=PLbMVogVj5nJQo8D9D-D6lMqh4FJbPeE_f">Physical Applications of Stochastic Processes</a></td>
+    <td><a href="https://www.youtube.com/playlist?list=PLbMVogVj5nJQo8D9D-D6lMqh4FJbPeE_f">Physical Applications of Stochastic Processes</a></td>
     <td><a href="https://en.wikipedia.org/wiki/V._Balakrishnan_%28physicist%29">V. Balakrishnan</a></td>
     <td>2015</td>
   </tr>
   <tr>
-    <td><a href="https://www.youtube.com/watch?v=Q6Gw08pwhws&list=PL5E4E56893588CBA8">Classical Physics</a></td>
+    <td><a href="https://www.youtube.com/playlist?list=PL5E4E56893588CBA8">Classical Physics</a></td>
     <td><a href="https://en.wikipedia.org/wiki/V._Balakrishnan_%28physicist%29">V. Balakrishnan</a></td>
     <td>2009</td>
   </tr>
   <tr>
-    <td><a href="https://www.youtube.com/watch?v=TcmGYe39XG0&list=PL0F530F3BAF8C6FCC">Quantum Physics</a></td>
+    <td><a href="https://www.youtube.com/playlist?list=PL0F530F3BAF8C6FCC">Quantum Physics</a></td>
     <td><a href="https://en.wikipedia.org/wiki/V._Balakrishnan_%28physicist%29">V. Balakrishnan</a></td>
     <td>2008</td>
   </tr>
@@ -119,7 +119,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-Computer-Science" class="outline-3">
 <h3 id="Computer-Science">Computer Science</h3>
-<div class="outline-text-3" id="text-org8c29422">
+<div class="outline-text-3" id="text-org59cecc0">
 <table>
   <tr>
     <td colspan="3">
@@ -147,12 +147,12 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     </td>
   </tr>
   <tr>
-    <td> <a href="https://www.youtube.com/playlist?list=PLE18841CABEA24090">Structure and Interpretation</a></td>
+    <td> <a href="https://www.youtube.com/playlist?list=PLE18841CABEA24090">Structure and Interpretation ...</a></td>
     <td> <a href="https://en.wikipedia.org/wiki/Hal_Abelson">Abelson</a> & <a href="https://en.wikipedia.org/wiki/Gerald_Jay_Sussman">Sussman</a></td>
     <td> 1986 </td>
   </tr>
   <tr>
-    <td> <a href="https://www.youtube.com/watch?v=3IoqyXmAAkU&list=PLCAl7tjCwWyGjdzOOnlbGnVNZk0kB8VSa">Parallel Computing and Scientific Machine Learning</a></td>
+    <td> <a href="https://www.youtube.com/playlist?list=PLCAl7tjCwWyGjdzOOnlbGnVNZk0kB8VSa">Parallel Computing and Scientific Machine Learning</a></td>
     <td> <a href="https://chrisrackauckas.com/">Chris Rackauckas</a></td>
     <td> 2020 </td>
   </tr>
@@ -162,7 +162,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-Mathematics" class="outline-3">
 <h3 id="Mathematics">Mathematics</h3>
-<div class="outline-text-3" id="text-org774e7e2">
+<div class="outline-text-3" id="text-org3912f9d">
 <table>
   <tr>
     <td> <a href="https://www.youtube.com/playlist?list=PLMrJAkhIeNNR20Mz-VpzgfQs5zrYi085m">Control Bootcamp</a></td>
@@ -180,7 +180,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-General" class="outline-3">
 <h3 id="General">General</h3>
-<div class="outline-text-3" id="text-org5a1f532">
+<div class="outline-text-3" id="text-org6c5bbb5">
 <table>
    <tr>
     <td colspan="3">
@@ -188,7 +188,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     </td>
   </tr>
    <tr>
-    <td> <a href="https://www.cmu.edu/biolphys/deserno/pdf/can_a_biologist_fix_a_radio.pdf">Can a Biologist Fix a Radio?</a></td>
+    <td> <a href="https://www.cell.com/cancer-cell/pdf/S1535-6108(02)00133-2.pdf">Can a Biologist Fix a Radio?</a></td>
     <td> Yuri Lazenbnik </td>
     <td> 2002 </td>
   </tr>
@@ -210,11 +210,11 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-Humanities" class="outline-2">
 <h2 id="Humanities">Humanities</h2>
-<div class="outline-text-2" id="text-org64ba82e">
+<div class="outline-text-2" id="text-orgc7b1441">
 </div>
 <div id="outline-container-Anthropology" class="outline-3">
 <h3 id="Anthropology">Anthropology</h3>
-<div class="outline-text-3" id="text-orge2592c9">
+<div class="outline-text-3" id="text-orgdc49b3a">
 <table>
   <tr>
     <td colspan="3">
@@ -242,7 +242,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-History" class="outline-3">
 <h3 id="History">History</h3>
-<div class="outline-text-3" id="text-org180d4a8">
+<div class="outline-text-3" id="text-org92b0733">
 <table>
   <tr>
     <td colspan="3">
@@ -251,7 +251,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
   </tr>
   <tr>
     <td>
-      <a href="https://www.youtube.com/watch?v=aq4G-7v-_xI&list=PLODnBH8kenOp7y_w1CWTtSLxGgAU6BR8M">Historia Civilis</a> </td>
+      <a href="https://www.youtube.com/playlist?list=PLODnBH8kenOp7y_w1CWTtSLxGgAU6BR8M">Historia Civilis</a> </td>
     <td>Historia Civilis</td>
     <td> 2015+ </td>
   </tr>
@@ -269,13 +269,23 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
     <td><a href="https://en.wikipedia.org/wiki/Crash_Course_(YouTube)">Crash Course</a></td>
     <td>2012</td>
   </tr>
+   <tr>
+    <td colspan="3">
+      <h4>Lectures</h4>
+    </td>
+  </tr>
+  <tr>
+    <td><a href="https://www.youtube.com/watch?v=_IO_Ldn2H4o">A People's History of Ancient Rome</a></td>
+    <td><a href="https://en.wikipedia.org/wiki/Michael_Parenti">Michael Parenti</a></td>
+    <td>1998</td>
+  </tr>
 </table>
 </div>
 </div>
 
 <div id="outline-container-Economics-and-Finance" class="outline-3">
 <h3 id="Economics-and-Finance">Economics and Finance</h3>
-<div class="outline-text-3" id="text-org2d75990">
+<div class="outline-text-3" id="text-orgc4027bc">
 <table>
   <tr>
     <td colspan="3">
@@ -323,7 +333,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container--American-Class-amp-Culture" class="outline-3">
 <h3 id="-American-Class-amp-Culture">(American) Class &amp; Culture</h3>
-<div class="outline-text-3" id="text-orgeb488e9">
+<div class="outline-text-3" id="text-org84fe384">
 <table>
   <tr>
     <td colspan="3">
@@ -387,7 +397,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container--Geo-Politics" class="outline-3">
 <h3 id="-Geo-Politics">(Geo)Politics</h3>
-<div class="outline-text-3" id="text-orgaeb1792">
+<div class="outline-text-3" id="text-orgb342508">
 <table>
   <tr>
     <td colspan="3">
@@ -412,7 +422,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-orgea3dcaf">
+<div class="outline-text-2" id="text-org3844ca1">
 <table>
   <tr>
     <td colspan="3">
@@ -465,7 +475,7 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 
 <div id="outline-container-Fiction" class="outline-2">
 <h2 id="Fiction">Fiction</h2>
-<div class="outline-text-2" id="text-org151fddb">
+<div class="outline-text-2" id="text-org09b2343">
 <table>
   <tr>
     <td colspan="3">
@@ -504,7 +514,7 @@ Caveat Emptor.</em>
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2022 Reilly Raab
+Copyright © 2023 Reilly Raab
 </footer>
 </body>
 </html>
